--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HotPack - Cadastre-se e seja a primeira a vender seus packs</title>
   <style>
     body {
@@ -26,10 +27,12 @@
       z-index: 1000;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
+
     .header .logo {
       font-size: 1.8em;
       font-weight: bold;
     }
+
     .header .btn-top {
       background: #ffffff;
       color: #ff0057;
@@ -39,6 +42,7 @@
       text-decoration: none;
       transition: all 0.3s ease;
     }
+
     .header .btn-top:hover {
       background-color: #ff0057;
       color: #fff;
@@ -51,16 +55,19 @@
       max-width: 800px;
       margin: auto;
     }
+
     .hero h1 {
       font-size: 3em;
       margin-bottom: 20px;
       color: #ff0057;
     }
+
     .hero p {
       font-size: 1.2em;
       color: #555;
       margin-bottom: 40px;
     }
+
     .hero a {
       background: #ff0057;
       color: white;
@@ -71,6 +78,7 @@
       transition: background 0.3s ease;
       box-shadow: 0 3px 10px rgba(255, 0, 87, 0.3);
     }
+
     .hero a:hover {
       background: #e6004d;
     }
@@ -84,6 +92,7 @@
       padding: 60px 20px;
       background-color: #f9f9f9;
     }
+
     .feature {
       flex: 1 1 250px;
       max-width: 300px;
@@ -94,9 +103,11 @@
       text-align: center;
       transition: transform 0.3s ease;
     }
+
     .feature:hover {
       transform: translateY(-5px);
     }
+
     .feature h3 {
       color: #ff0057;
       margin-bottom: 10px;
@@ -107,15 +118,18 @@
       text-align: center;
       padding: 60px 20px;
     }
+
     #formulario h2 {
       font-size: 2.5em;
       margin-bottom: 20px;
       color: #ff0057;
     }
+
     #formulario p {
       font-size: 1.2em;
       margin-bottom: 20px;
     }
+
     #formulario input {
       padding: 10px;
       font-size: 1em;
@@ -125,6 +139,7 @@
       border-radius: 8px;
       border: 1px solid #ddd;
     }
+
     #formulario button {
       background-color: #ff0057;
       color: white;
@@ -134,6 +149,7 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
+
     #formulario button:hover {
       background-color: #e6004d;
     }
@@ -152,14 +168,17 @@
       .hero h1 {
         font-size: 2.5em;
       }
+
       .hero p {
         font-size: 1.1em;
       }
+
       .header {
         flex-direction: column;
         gap: 10px;
         padding: 20px;
       }
+
       .header .btn-top {
         width: 100%;
         max-width: 300px;
@@ -167,13 +186,14 @@
     }
   </style>
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=485328534"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YGEMMMSB9H"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', '485328534');
+
+    gtag('config', 'G-YGEMMMSB9H');
   </script>
 
   <!-- Contagem de cliques -->
@@ -192,6 +212,7 @@
     }
   </script>
 </head>
+
 <body>
 
   <!-- Header -->
@@ -203,7 +224,8 @@
   <!-- Hero Section -->
   <section class="hero">
     <h1>Ganhe dinheiro com seus packs</h1>
-    <p>Junte-se à nossa plataforma segura e privativa. Registre-se para ser uma das primeiras a vender seus packs e comece a lucrar.</p>
+    <p>Junte-se à nossa plataforma segura e privativa. Registre-se para ser uma das primeiras a vender seus packs e
+      comece a lucrar.</p>
     <a href="#formulario" onclick="contarCliques()">PRÉ-REGISTRO</a>
   </section>
 
@@ -240,4 +262,5 @@
   </footer>
 
 </body>
+
 </html>
